✏️ fix typo and swagger
