# src/swagger.json
@@ -662,6 +662,45 @@
           }
         }
       }
+    },
+    "/tasks/complete/{id}": {
+      "put": {
+        "tags": [
+          "Tasks"
+        ],
+        "summary": "🔒️ Complete a task by logged user (set done = true)",
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "authorization",
+            "in": "header",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Task updated"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Task not found"
+          },
+          "500": {
+            "description": "Authorization header is required"
+          }
+        }
+      }
     }
   },
   "security": [
